2008-02-25  Darin Adler  <darin@apple.com>

        Reviewed by Anders.

        - test for http://bugs.webkit.org/show_bug.cgi?id=17186
          Fragment navigation within a page permanently cancels meta refresh

        * fast/loader/meta-refresh-anchor-click-expected.txt: Added.
        * fast/loader/meta-refresh-anchor-click.html: Added.
        * fast/loader/resources/meta-refresh-subframe.html: Added.

2008-02-25  Johnny Ding  <johnnyding.webkit@gmail.com>

        Reviewed by Darin Adler.

        - bug http://bugs.webkit.org/show_bug.cgi?id=17444
        Test for multiple nested scripts which are in a external script. 

        * fast/tokenizer/nested-multiple-scripts-expected.txt: Added.
        * fast/tokenizer/nested-multiple-scripts.html: Added.
        * fast/tokenizer/resources/external-script-1.js: Added.
        * fast/tokenizer/resources/external-script-2.js: Added.

2008-02-24  Michael Knaup  <michael.knaup@mac.com>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=8749
        
        * platform/mac/fast/canvas/canvas-draw-xbm-image-expected.checksum: Added.
        * platform/mac/fast/canvas/canvas-draw-xbm-image-expected.png: Added.
        * platform/mac/fast/canvas/canvas-draw-xbm-image-expected.txt: Added.
        * platform/mac/fast/canvas/canvas-draw-xbm-image.html: Added.
        * platform/mac/fast/canvas/resources: Added.
        * platform/mac/fast/canvas/resources/smile.xbm: Added.

2008-02-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - test for http://bugs.webkit.org/show_bug.cgi?id=17471
          REGRESSION (r30438): Crash in deleteLineBoxes in cursor-adjusting code browsing Acid3

        * http/tests/misc/object-image-error-expected.txt: Added.
        * http/tests/misc/object-image-error.html: Added.
        * http/tests/misc/resources/404image.php: Added.

2008-02-24  Dan Bernstein  <mitz@apple.com>

        Rubber-stamped by Oliver Hunt.
