@@ -1,3 +1,12 @@
+2008-02-25  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by T3h Mitz Pettel (Dan Bernstein)
+
+        Layout test for already fixed bug <rdar://problem/5729445>
+
+        * storage/multiple-transactions-expected.txt: Added.
+        * storage/multiple-transactions.html: Added.
+
 2008-02-25  Darin Adler  <darin@apple.com>
 
         Reviewed by Anders.
